// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionListItem should render 1`] = `
<View
  accessible={true}
  clickable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "transform": Array [
        Object {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingHorizontal": 16,
        "paddingVertical": 4,
      }
    }
  >
    <View
      animate={null}
      customAnimate={null}
      onReady={false}
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 16,
          "height": 64,
          "marginRight": 16,
          "width": 64,
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/600/400/?random",
              "url": "https://picsum.photos/600/400/?random",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 64,
            "marginRight": 16,
            "opacity": 0,
            "width": 64,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "borderBottomWidth": 0.5,
          "borderColor": "rgba(165, 165, 165, 0.6)",
          "flex": 1,
          "height": 68,
          "justifyContent": "center",
          "marginTop": 6.4,
        }
      }
    >
      <Text
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        numberOfLines={2}
        style={
          Object {
            "color": "#A5A5A5",
            "fontFamily": "InterUI-Regular",
            "fontSize": 14,
            "lineHeight": 20,
          }
        }
      >
        Boom
      </Text>
    </View>
  </View>
</View>
`;

exports[`ActionListItem should render a loading state 1`] = `
<View
  accessible={true}
  clickable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "transform": Array [
        Object {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingHorizontal": 16,
        "paddingVertical": 4,
      }
    }
  >
    <View
      animate={null}
      customAnimate={null}
      onReady={false}
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 16,
          "height": 64,
          "marginRight": 16,
          "width": 64,
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/600/400/?random",
              "url": "https://picsum.photos/600/400/?random",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 64,
            "marginRight": 16,
            "opacity": 0,
            "width": 64,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "borderBottomWidth": 0.5,
          "borderColor": "rgba(165, 165, 165, 0.6)",
          "flex": 1,
          "height": 68,
          "justifyContent": "center",
          "marginTop": 6.4,
        }
      }
    >
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 12,
            "marginVertical": 2.6400000000000006,
            "width": "50%",
          }
        }
      />
      <View
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 14,
            "marginVertical": 3,
            "width": "100%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`ActionListItem should render with a label 1`] = `
<View
  accessible={true}
  clickable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "transform": Array [
        Object {
          "scale": 1,
        },
      ],
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingHorizontal": 16,
        "paddingVertical": 4,
      }
    }
  >
    <View
      animate={null}
      customAnimate={null}
      onReady={false}
      style={
        Object {
          "aspectRatio": 1,
          "backgroundColor": "#A5A5A5",
          "borderRadius": 16,
          "height": 64,
          "marginRight": 16,
          "width": 64,
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "https://picsum.photos/600/400/?random",
              "url": "https://picsum.photos/600/400/?random",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 64,
            "marginRight": 16,
            "opacity": 0,
            "width": 64,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "borderBottomWidth": 0.5,
          "borderColor": "rgba(165, 165, 165, 0.6)",
          "flex": 1,
          "height": 68,
          "justifyContent": "center",
          "marginTop": 6.4,
        }
      }
    >
      <Text
        numberOfLines={1}
        style={
          Object {
            "color": "#505050",
            "fontFamily": "InterUI-Bold",
            "fontSize": 12,
            "lineHeight": 17.28,
          }
        }
      >
        What
      </Text>
      <Text
        bold={false}
        ellipsizeMode="tail"
        italic={false}
        numberOfLines={2}
        style={
          Object {
            "color": "#A5A5A5",
            "fontFamily": "InterUI-Regular",
            "fontSize": 14,
            "lineHeight": 20,
          }
        }
      >
        Boom
      </Text>
    </View>
  </View>
</View>
`;
